--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			   placeholder="Digite seu e-mail"
                required> </br>
 			   
-            <input name="redirectTo" type="hidden" value="https://popit.netlify.app/thankyoupage/thankyou.html" />
+            <input name="redirectTo" type="hidden" value="https://focused-swirles-2a76a2.netlify.app/thankyoupage/thankyou.html" />
             <input name="debugMode" type="hidden" value="true" />
             <input type="submit" />
          </form>
