alteracao de imagem

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	     <div id="produto">
 	     <div class="produtoEbook">
 		 <div class="col-md-12">
-		    <img class="imgEbook" src="images/imageebook.png" hspace="30">
+		    <img class="imgEbook" src="images/popit.png">
 			<p class="descDestaque">Descricao do produto</p>
 	     </div>
 		 
