alteracao da descricao

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	  
 	  <div id="tituloDestaque">
 	     <div class="col-md-12">
-	     <h2>Baixe agora o ebook gratuito</h2>
+	     <h2>GUIA PRÁTICO PARA SE DAR BEM NAS SUAS REDES SOCIAIS!</h2>
 		 </div>
 	  </div>
 	  
@@ -27,7 +27,17 @@
 	     <div class="produtoEbook">
 		 <div class="col-md-12">
 		    <img class="imgEbook" src="images/popit.png">
-			<p class="descDestaque">Descricao do produto</p>
+			<p class="descDestaque">Aprenda neste material como utilizar suas redes sociais para se divertir e ainda por cima impactar o máximo de pessoas possíveis.
+                                    Aqui, você via encontrar: </br>
+                                    INFLUENCIADORES para seguir </br>
+                                    INSPIRAÇÕES para te ajudar a criar seus vídeos </br>
+
+                                    Dicas para EDITAR SEUS VÍDEOS </br>
+
+                                    Como montar um plano para GANHAR SEGUIDORES </br>
+
+                                    E muito mais! </br>
+            </p>
 	     </div>
 		 
 	  <div>
