--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="conteudo">
       <div id="cabecalho" style="color:yellow;">
 	     <div class="col-md-12">
-	     <h1>POP IT</h1>
+	     <img class="imgEbook" src="images/logo amarela.png">
 		 </div>
       </div>
 	  
@@ -26,7 +26,6 @@
 	     <div id="produto">
 	     <div class="produtoEbook">
 		 <div class="col-md-12">
-		    <img class="imgEbook" src="images/popit.png">
 			<p class="descDestaque">Aprenda neste material como utilizar suas redes sociais para se divertir e ainda por cima impactar o máximo de pessoas possíveis.
                                     Aqui, você via encontrar: </br>
                                     INFLUENCIADORES para seguir </br>
