--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="conteudo">
       <div id="cabecalho" style="color:yellow;">
 	     <div class="col-md-12">
-	     <img class="imgEbook" src="images/logo amarela.png">
+	     <img class="imgEbook" src="images/11Artboard 1.png">
 		 </div>
       </div>
 	  
